Started work on the road to tensor buffers

--- a/29.9.2025..md
+++ b/29.9.2025..md
@@ -40,7 +40,7 @@ The scene itself is a trivially simple hierarchical database - it's just a list 
 ## Inventive graphical programming features
 VitraeEngine was created with graphical advancements as a first-class usage goal.
 
-### Tensor buffers {y}    
+### Tensor buffers     
 By leveraging the flexibility of the hardware rasterizer and texture sampling,
 we can enable more memory manipulation and compression features for some buffers.
 These texture element based buffers will be called `TensorBuffers`
